Add graph and logging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
+log = "0.4.6"
+wasm-log = "0.3"
 wasm-bindgen = "0.2.84"
+modulee-engine = { path = "vendor/modulee-engine" }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
