Replaces build.sh by build_pkg.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,8 @@ console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
+
+
+[[bin]]
+name = "build_pkg"
+path = "build_pkg.rs"
